--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <h1 id="nodepop-restful-api">Nodepop Restful API</h1>
+      <img src="images/node.png" height="60px" />
       <h4 id="david-lópez-rguez">David López Rguez</h4>
       <h2 id="información-general">Información general</h2>
       <p><strong>Nodepop</strong> es un API para la gestión de anuncios. La api permite las siguientes acciones: - Registro de usuarios. - Autenticación. - Listar etiquetas disponibles para los anuncios. - Listar anuncios.</p>
